feat(healthrecord): return create response with violations
