# src/main/java/io/github/jo0yo0n/vitalsjournal/healthrecord/controller/HealthRecordController.java
@@ -2,19 +2,22 @@ package io.github.jo0yo0n.vitalsjournal.healthrecord.controller;
 
 import io.github.jo0yo0n.vitalsjournal.auth.util.JwtSubjects;
 import io.github.jo0yo0n.vitalsjournal.healthrecord.controller.request.HealthRecordCreateRequest;
+import io.github.jo0yo0n.vitalsjournal.healthrecord.controller.response.HealthRecordCreateResponse;
 import io.github.jo0yo0n.vitalsjournal.healthrecord.controller.response.HealthRecordListResponse;
 import io.github.jo0yo0n.vitalsjournal.healthrecord.controller.response.HealthRecordResponse;
-import io.github.jo0yo0n.vitalsjournal.healthrecord.domain.HealthRecord;
+import io.github.jo0yo0n.vitalsjournal.healthrecord.service.HealthRecordCreateResult;
 import io.github.jo0yo0n.vitalsjournal.healthrecord.service.HealthRecordService;
 import io.github.jo0yo0n.vitalsjournal.healthrecord.service.command.HealthRecordCreateCommand;
 import jakarta.validation.Valid;
 import java.util.List;
+import org.springframework.http.HttpStatus;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.security.oauth2.jwt.Jwt;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
@@ -41,7 +44,8 @@ public class HealthRecordController {
   }
 
   @PostMapping()
-  public HealthRecordResponse saveHealthRecord(
+  @ResponseStatus(HttpStatus.CREATED)
+  public HealthRecordCreateResponse saveHealthRecord(
       @AuthenticationPrincipal Jwt jwt, @Valid @RequestBody HealthRecordCreateRequest request) {
 
     Long userId = JwtSubjects.requireUserId(jwt);
@@ -55,7 +59,7 @@ public class HealthRecordController {
             request.diastolic(),
             request.memo());
 
-    HealthRecord healthRecord = healthRecordService.saveHealthRecord(userId, command);
-    return HealthRecordResponse.from(healthRecord);
+    HealthRecordCreateResult result = healthRecordService.saveHealthRecord(userId, command);
+    return HealthRecordCreateResponse.from(result.healthRecord(), result.violations());
   }
 }
